--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,3 +259,66 @@ h2 {
         font-size: 1rem;
     }
 }
+
+    .carousel-indicators {
+        list-style-type: none;
+        padding-left: 0;
+    }
+
+    .carousel-indicators li::marker {
+        content: "";
+    }
+
+    .carousel-indicators li {
+        text-indent: 0;
+    }
+    .carousel-item{
+        
+        position: relative;
+        height: 32rem;
+        background-color: hsla(0, 0%, 0.7%);
+        overflow: hidden;
+        
+    }
+    .container{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        padding-bottom: 50px;
+    }
+    .carousel-caption{
+        background-color: hsla(0, 0%, 0%, 0.477);
+        padding: 20px;
+        border-radius: 10px;
+        color: white;
+    }
+    .carousel-caption h1{
+        color: blue;
+        font-weight: bold;
+    }
+    .over-lay-image1{
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        object-position: center ;
+        object-fit: cover;
+        opacity: 0.7;
+    }
+    .over-lay-image1 img{
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+    .Embeded{
+        padding: 30px;
+       
+    }
+    .Embeded-text{
+        text-align: center;
+        font-weight: bold; 
+        
+    }
